[gd_scene load_steps=7 format=3 uid="uid://dwi7nig2icwo2"]

[ext_resource type="Script" path="res://scripts/first_level.gd" id="1_m467n"]
[ext_resource type="Texture2D" uid="uid://do88killt2mb7" path="res://assets/sprites/background.png" id="2_no6y4"]
[ext_resource type="Texture2D" uid="uid://ctc42tjv3nhid" path="res://assets/sprites/john.png" id="3_kgi6t"]
[ext_resource type="Theme" uid="uid://beqbc2rrm4rwi" path="res://themes/theme_01.theme" id="4_58lit"]
[ext_resource type="Texture2D" uid="uid://dgxca271k65vn" path="res://assets/sprites/text_bubble.png" id="4_ld7eh"]
[ext_resource type="Texture2D" uid="uid://bnlb78r7bq2qo" path="res://assets/sprites/congratulation_screen.png" id="6_gj64i"]

[node name="FirstLevel" type="Node2D"]
script = ExtResource("1_m467n")

[node name="Background" type="CanvasLayer" parent="."]

[node name="HBoxContainer_Background" type="HBoxContainer" parent="Background"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="texture_Background" type="TextureRect" parent="Background/HBoxContainer_Background"]
layout_mode = 2
texture = ExtResource("2_no6y4")
flip_h = true

[node name="John" type="CanvasLayer" parent="."]

[node name="HBoxContainer_John" type="HBoxContainer" parent="John"]
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.123
anchor_right = 0.227
anchor_bottom = 1.111
offset_right = 0.47998
offset_bottom = 0.0719604

[node name="texture_John" type="TextureRect" parent="John/HBoxContainer_John"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_kgi6t")
flip_h = true

[node name="TextureRect" type="TextureRect" parent="John/HBoxContainer_John"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
texture = ExtResource("4_ld7eh")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="John/HBoxContainer_John/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -26.5
offset_right = 108.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 200

[node name="Label" type="Label" parent="John/HBoxContainer_John/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 38
text = "hello world"

[node name="answers" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="answers"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_right = -32.0
offset_bottom = -12.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8

[node name="answers" type="VBoxContainer" parent="answers/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("4_58lit")

[node name="MarginContainer2" type="MarginContainer" parent="answers/HBoxContainer/answers"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="answers/HBoxContainer/answers/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Choose a 
correct answer"

[node name="MarginContainer" type="MarginContainer" parent="answers/HBoxContainer/answers"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="answer_0" type="Button" parent="answers/HBoxContainer/answers/MarginContainer"]
layout_mode = 2
text = "answer 01"

[node name="MarginContainer3" type="MarginContainer" parent="answers/HBoxContainer/answers"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="answer_1" type="Button" parent="answers/HBoxContainer/answers/MarginContainer3"]
layout_mode = 2
text = "answer 02"

[node name="MarginContainer4" type="MarginContainer" parent="answers/HBoxContainer/answers"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="answer_2" type="Button" parent="answers/HBoxContainer/answers/MarginContainer4"]
layout_mode = 2
text = "answer 03"

[node name="left_side_buttons" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="left_side_buttons"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -24.0
offset_right = 170.0
offset_bottom = 30.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="left_side_buttons/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_58lit")

[node name="margin_goto_main_menu_button" type="MarginContainer" parent="left_side_buttons/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_constants/margin_bottom = 250

[node name="Button" type="Button" parent="left_side_buttons/HBoxContainer/VBoxContainer/margin_goto_main_menu_button"]
layout_mode = 2
text = "Go to main menu"

[node name="magin_replay_button" type="MarginContainer" parent="left_side_buttons/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_constants/margin_top = 250

[node name="Button" type="Button" parent="left_side_buttons/HBoxContainer/VBoxContainer/magin_replay_button"]
layout_mode = 2
text = "replay audio"

[node name="congratulations" type="CanvasLayer" parent="."]

[node name="HBoxContainer_Background" type="HBoxContainer" parent="congratulations"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="texture_Background" type="TextureRect" parent="congratulations/HBoxContainer_Background"]
layout_mode = 2
texture = ExtResource("6_gj64i")
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="congratulations"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("4_58lit")

[node name="congratulation_label" type="Label" parent="congratulations/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Congratulation!"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="congratulations/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="next_question" type="Button" parent="congratulations/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Let's continue!"

[node name="next_level" type="Button" parent="congratulations/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Go to next level!"

[node name="not_congratulation" type="CanvasLayer" parent="."]

[node name="HBoxContainer_Background2" type="HBoxContainer" parent="not_congratulation"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -944.0
offset_top = -720.0
offset_right = 944.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="texture_Background" type="TextureRect" parent="not_congratulation/HBoxContainer_Background2"]
modulate = Color(0.196078, 0.196078, 0.196078, 1)
layout_mode = 2
texture = ExtResource("2_no6y4")
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="not_congratulation"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("4_58lit")

[node name="wrong_answer_label" type="Label" parent="not_congratulation/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Wrong answer"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="not_congratulation/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="try_again" type="Button" parent="not_congratulation/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "try again"

[connection signal="pressed" from="answers/HBoxContainer/answers/MarginContainer/answer_0" to="." method="_on_answer_0_pressed"]
[connection signal="pressed" from="answers/HBoxContainer/answers/MarginContainer3/answer_1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="answers/HBoxContainer/answers/MarginContainer4/answer_2" to="." method="_on_answer_2_pressed"]
[connection signal="pressed" from="left_side_buttons/HBoxContainer/VBoxContainer/margin_goto_main_menu_button/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="congratulations/VBoxContainer/MarginContainer/next_question" to="." method="_on_next_question_pressed"]
[connection signal="pressed" from="congratulations/VBoxContainer/MarginContainer/next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="not_congratulation/VBoxContainer/MarginContainer/try_again" to="." method="_on_try_again_pressed"]
